src/component/box_plot/snapshots/envision__component__box_plot__snapshot_tests__snapshot_single_vertical.snap
---
source: src/component/box_plot/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Latency Distribution──────────────────┐
│                  ---                 │
│                   |                  │
│                   |                  │
│                   |                  │
│                  ---                 │
│                  | |                 │
│                  | |                 │
│                  ===                 │
│                  | |                 │
│                  | |                 │
│                  | |                 │
│                  | |                 │
│                  ---                 │
│                   |                  │
│                   |                  │
│                   |                  │
│                  ---                 │
│                 API                  │
└──────────────────────────────────────┘
