src/component/box_plot/snapshots/envision__component__box_plot__snapshot_tests__snapshot_with_outliers.snap
---
source: src/component/box_plot/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌With Outliers─────────────────────────┐
│                   *                  │
│                                      │
│                   *                  │
│                                      │
│                                      │
│                  ---                 │
│                   |                  │
│                  ---                 │
│                  | |                 │
│                  ===                 │
│                  | |                 │
│                  ---                 │
│                   |                  │
│                   |                  │
│                  ---                 │
│                                      │
│                   *                  │
│               Response               │
└──────────────────────────────────────┘
