src/component/box_plot/snapshots/envision__component__box_plot__snapshot_tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/box_plot/snapshot_tests.rs
expression: terminal.backend().to_string()
---
                   ---                  
                    |                   
                   ---                  
                   | |                  
                   ===                  
                   | |                  
                   | |                  
                   | |                  
                   ---                  
                    |                   
                   ---                  
                  API
